updated -- navbar css to fix 60% of screen and font readability

--- a/views/static/css/base.css
+++ b/views/static/css/base.css
@@ -1,7 +1,14 @@
 body {
+    max-width: 60vw;
+    width: 100%;
+    height: 100%;
+
     color: #777;
     box-sizing: border-box;
-    /* font-family: 'Helvetica', sans-serif; */
+    font-family: 'Helvetica', sans-serif;
+
+    display: flex;
+    flex-direction: column;
 }
 
 p {
@@ -10,7 +17,6 @@ p {
 }
 
 h1 {
-    color: #444;
     font-size: 3rem;
     margin-bottom: 0;
     font-weight: bold;
