--- a/views/static/css/home.css
+++ b/views/static/css/home.css
@@ -115,3 +115,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.nav-link.active {
+    color: rgba(0,0,0,0.7);
+    border-bottom-color: rgba(0,0,0,0.7);
+}
